Setting allowed headers on cors configuration