@@ -19,6 +19,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 
 import javax.annotation.PostConstruct;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -76,11 +77,13 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 
     private CorsConfiguration createCorsConfiguration() {
         var cors = new CorsConfiguration();
-        cors.addAllowedOrigin("http://localhost:8080");
-        cors.addAllowedOrigin("http://localhost:8080");
+        cors.addAllowedOrigin("http://localhost:8000");
         cors.addAllowedOrigin("http://stockclient-service:80");
         cors.setAllowCredentials(true);
-        cors.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+        cors.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE","OPTIONS"));
+        cors.setAllowedHeaders(Arrays.asList("Origin","Access-Control-Allow-Origin",
+                "Content-Type","Accept","Authorization","Origin,Accept","X-Requested-With",
+                "Access-Control-Request-Method","Access-Control-Request-Headers"));
 
         return cors;
     }
